paralax images between sections

--- a/styles.css
+++ b/styles.css
@@ -178,4 +178,33 @@ img[loading="lazy"] {
 
 img[loading="lazy"].loaded {
     opacity: 1;
+}
+
+/* Parallax Sections */
+.parallax-container {
+    position: relative;
+    height: 400px;
+    overflow: hidden;
+    background-color: #f3f4f6;
+}
+
+.parallax-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 120%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+@media (max-width: 768px) {
+    .parallax-container {
+        height: 300px;
+    }
+    .parallax-bg {
+        background-attachment: scroll;
+    }
 } 
